--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,3 +1,13 @@
+@font-face {
+    font-family: 'Oswald';
+    src: url('../fonts/Oswald-Regular.ttf') format('truetype');
+}
+
+* {
+    font-family: 'Oswald', sans-serif;
+}
+
+
 html{
     height: 100%;
 }
